<resources>
    <string name="app_name">Pokemon battle simulator</string>
    <string name="gyarados">Gyarados</string>
    <string name="pikachu">Pikachu</string>
    <string name="mainInfo">Select your oponents and start the fight to see who is the winner</string>
    <string name="mainviewbtn">Start the fight</string>
    <string name="winnerHeadline">And the winner is...</string>
    <string name="cubone">Cubone</string>
    <string name="giratina">Giratina</string>
    <string name="bulbasur">Bulbasur</string>
    <string name="feebas">Feebas</string>
</resources>